name:                mutate
version:             1.0.0.0
synopsis:            mutable state abstractions
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Craig Roche
maintainer:          Craig Roche <cdxr01@gmail.com>
copyright:           Copyright (c) 2013 Craig Roche
category:            Concurrency
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Control.Mutate, Control.Mutate.State
  build-depends:       base ==4.6.*, monad-stm ==0.1.*, mtl ==2.1.*, stm ==2.4.*, transformers-base ==0.4.*, StateVar ==1.0.*
